--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,20 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fork-and-fig-albuquerque\n",
+      "Fork & Fig\n",
       "Fork & Fig\n"
      ]
     }
    ],
    "source": [
-    "print(better_restaurant(frontier_restaurant, fork_fig)[\"i\"]) # 'Fork & Fig'\n",
+    "print(better_restaurant(frontier_restaurant, fork_fig)[\"name\"]) # 'Fork & Fig'\n",
     "print(better_restaurant(fork_fig, frontier_restaurant)['name']) # 'Fork & Fig'"
    ]
   },
@@ -194,6 +194,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
+    "    \n",
     "    pass"
    ]
   },
