--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,8 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant[\"price\"] > alternative\n",
+    "    if restaurant[\"price\"] < alternative[\"price\"]:\n",
+    "        return r\n",
     "    pass"
    ]
   },
