--- a/index.ipynb
+++ b/index.ipynb
@@ -189,23 +189,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if restaurant[\"price\"] < alternative[\"price\"]:\n",
-    "        return restaurant\n",
+    "        return restaurant[\"name\"]\n",
     "    else:\n",
-    "        return alternative\n",
+    "        return alternative[\"name\"]\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frontier Restaurant\n",
+      "Frontier Restaurant\n"
+     ]
+    }
+   ],
    "source": [
     "print(cheaper_restaurant(fork_fig, frontier_restaurant)['name']) # 'Frontier Restaurant'\n",
     "print(cheaper_restaurant(frontier_restaurant, fork_fig)['name']) # 'Frontier Restaurant'"
