--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -216,8 +216,8 @@
     }
    ],
    "source": [
-    "print(cheaper_restaurant(fork_fig, frontier_restaurant)['name']) # 'Frontier Restaurant'\n",
-    "print(cheaper_restaurant(frontier_restaurant, fork_fig)['name']) # 'Frontier Restaurant'"
+    "print(cheaper_restaurant(fork_fig, frontier_restaurant)) # 'Frontier Restaurant'\n",
+    "print(cheaper_restaurant(frontier_restaurant, fork_fig)) # 'Frontier Restaurant'"
    ]
   },
   {
