--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
-    "    if restaurants[\"\"]\n",
+    "    if restaurants[\"is_closed\"]\n",
     "    pass"
    ]
   },
