--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
-    "    if restaurants[\"is_closed\"]\n",
+    "    if restaurants[\"is_closed\"]:\n",
+    "        open.append\n",
     "    pass"
    ]
   },
