automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,8 +291,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
-    "    if restaurants[\"is_closed\"]:\n",
-    "        open.append\n",
+    "    if not restaurants[\"is_closed\"]:\n",
+    "        \n",
     "    pass"
    ]
   },
