--- a/index.ipynb
+++ b/index.ipynb
@@ -292,6 +292,7 @@
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    if not restaurants[\"is_closed\"]:\n",
+    "        open.append\n",
     "        \n",
     "    pass"
    ]
