automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
-    "    for \n",
+    "    for restaurants\n",
     "    if restaurants[\"is_closed\"]:\n",
     "        open.append(retuarants)  \n",
     "    pass"
