--- a/index.ipynb
+++ b/index.ipynb
@@ -291,8 +291,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
-    "    for restaurants\n",
-    "    if restaurants[\"is_closed\"]:\n",
+    "    for restaurant in restaurants:\n",
+    "    if restaurant[\"is_closed\"]:\n",
     "        open.append(retuarants)  \n",
     "    pass"
    ]
