--- a/index.ipynb
+++ b/index.ipynb
@@ -294,6 +294,7 @@
     "    for restaurant in restaurants:\n",
     "        if not restaurant[\"is_closed\"]:\n",
     "            open.append(restaurants)  \n",
+    "            print(open)\n",
     "        return open\n",
     "    pass"
    ]
