--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for restaurant in restaurants:\n",
-    "        print(restaurant[\"name\"])\n",
+    "        if res\n",
     "    pass"
    ]
   },
