--- a/index.ipynb
+++ b/index.ipynb
@@ -285,14 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    closed = []\n",
+    "    open = []\n",
     "    for restaurant in restaurants:\n",
-    "        if not restaurant['is_closed']:\n",
+    "        if restaurant['is_closed']:\n",
     "            open.append(restaurant)\n",
     "        return open\n",
     "    pass"
@@ -300,16 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,18 +320,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Fork & Fig'"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-85-bf5607d088f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mopen_restaurants\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrestaurants\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# 'Fork & Fig'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
